# jack1

./: .gitignore  Makefile.am  configure.ac
drivers/: Makefile.am
drivers/alsa/: Makefile.am  alsa_driver.cpp  alsa_driver.hpp  generic_hw.cpp  hdsp.cpp  usx2y.cpp
drivers/alsa_midi/: Makefile.am  alsa_midi.cpp  port.hpp  port_hash.cpp  port_thread.cpp
drivers/am/: Makefile.am  alsa_midi.hpp  alsa_midi_driver.c
drivers/dummy/: Makefile.am  dummy_driver.cpp  dummy_driver.hpp
drivers/netjack/: Makefile.am  net_driver.cpp  net_driver.hpp  netjack.cpp  netjack_packet.cpp
driverspp/alsa/: Makefile.am  alsa_driver.cpp  alsa_driver.hpp  hammerfall.cpp  ice1712.cpp  memops.cpp  usx2y.cpp
driverspp/alsa_midi/: Makefile.am  a2j.hpp  alsa_midi.cpp  alsa_midi_driver.c  list.h  port.cpp
driverspp/am/: Makefile.am
driverspp/coreaudio/: Makefile.am
driverspp/dummy/: Makefile.am  dummy_driver.cpp
driverspp/firewire/: Makefile.am
driverspp/freebob/: Makefile.am
driverspp/netjack/: Makefile.am  net_driver.cpp  net_driver.hpp  netjack.cpp  netjack_packet.cpp
driverspp/oss/: Makefile.am
driverspp/portaudio/: Makefile.am
driverspp/sun/: Makefile.am
include/: Makefile.am  driver.hpp  driver_interface.hpp  driver_parse.h  engine.h  engine.hpp  internal.hpp  jack_constants.hpp  jack_utils.hpp  systemtest.h  unlock.hpp
includecpp/: Makefile.am  driver.hpp  driver_parse.hpp  engine.hpp  internal.hpp  jack_constants.cpp  jack_constants.hpp  port.hpp  sanitycheck.hpp  shm.hpp  varargs.hpp
jackd/: Makefile.am  clientengine.cpp  clientengine.hpp  controlapi.c  controlapi.cpp  engine.c  jack_drivers.cpp  jack_drivers.hpp  jack_engine.cpp  jack_engine.hpp  jack_lock_helpers.hpp  jack_options_parser.cpp  jack_options_parser.hpp  jack_signals.cpp  jack_signals.hpp  jackd.cpp  jackstart.cpp  md5.cpp  transengine.cpp  transengine.hpp
jackdpp/: Makefile.am  TestFile.cpp  TestFile.hpp  clientengine.c  clientengine.cpp  clientengine.h  clientengine.hpp  controlapi.cpp  engine.cpp  jack_cpp_utils.cpp  jack_cpp_utils.hpp  jack_drivers.cpp  jack_drivers.hpp  jack_engine.cpp  jack_engine.hpp  jack_options_parser.cpp  jack_options_parser.hpp  jack_pp_debug.cpp  jack_pp_debug.hpp  jack_signals.cpp  jack_signals.hpp  jack_utils.cpp  jack_utils.hpp  jackdpp.cpp  jackstartpp.cpp  transengine.cpp  transengine.hpp
libjack/: Makefile.am  client.cpp  consdes.c  driver.cpp  jack_pp_debug.hpp  messagebuffer.cpp  pool.cpp  port.cpp  shm.cpp  thread.cpp  time.cpp  unlock.cpp
libjackpp/: Makefile.am  client.cpp  driver.cpp  intclient.cpp  jack_pp_debug.cpp  jack_utils.cpp  local.hpp  messagebuffer.cpp  metadata.cpp  midiport.cpp  port.cpp  ringbuffer.cpp  simd.cpp  thread.cpp  time.cpp  transclient.cpp  unlock.cpp  uuid.cpp
macros/: ax_cxx_compile_stdcxx_14.m4  boost.m4
