NULL=

MAINTAINERCLEANFILES = Makefile.in version.hpp

noinst_HEADERS =		\
	atomicity.hpp		\
	bitset.hpp		\
	driver.hpp 		\
	driver_interface.hpp	\
	driver_parse.hpp	\
	engine.hpp		\
	hardware.hpp 		\
	internal.hpp 		\
	intsimd.hpp 		\
	memops.hpp		\
	messagebuffer.hpp	\
	pool.hpp		\
	port.hpp		\
	sanitycheck.h           \
	shm.hpp			\
	start.hpp		\
	systemtest.h            \
	unlock.hpp		\
	varargs.hpp		\
	version.hpp		\
	jack_constants.hpp	\
	jack_utils.hpp          \
	$(NULL)
